--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,20 +5,15 @@ on:
     - master
     - features/*
 jobs:
-  laravel-tests:
-    runs-on: ubuntu-latest
+  setup:
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v1
     - name: Copy ENV Laravel Configuration for CI
       run: php -r "file_exists('.env') || copy('.env.ci', '.env');"
     - name: Install Dependencies (PHP vendors)
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Create DB and schemas
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-        php artisan migrate
+    - name: Composer dump auto load
+      run: composer dump-autoload
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
