--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,7 @@ jobs:
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
     - name: Composer dump auto load
       run: composer dump-autoload
+    - name: Generate key
+      run: php artisan key:generate
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
