--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -11,7 +11,7 @@ jobs:
       run: composer dump-autoload
     - name: Config cache clear
       run: php artisan config:cache
-      name: Route cache clear
+    - name: Route cache clear
       run: php artisan route:cache
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
