--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -5,10 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Copy ENV Laravel Configuration for CI
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Generate key
       run: php artisan key:generate
-    - name: Composer dump auto load
-      run: composer dump-autoload
+    - name: Composer Install
+      run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
     - name: Config cache clear
       run: php artisan config:cache
     - name: Route cache clear
